added sample code to get the data files from the backend

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+
+<script src="scripts/get_data.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script>
+    getData(countryEmigration, function(data){
+        console.log(data);
+    })
+</script>
 <h1>Hello World</h1>
