--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Filter by year
             <span class="caret"></span></button>
         <ul class="dropdown-menu">
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
-            <li><a href="#">JavaScript</a></li>
+          
+            <li><a href="#">1990</a></li>
+            <li><a href="#">1995</a></li>
+            <li><a href="#">2000</a></li>
+            <li><a href="#">2005</a></li>
+            <li><a href="#">2010</a></li>
+            <li><a href="#">2015</a></li>
+            <li><a href="#">2017</a></li>
         </ul>
     </div>
 </div>
